# splitka

./: Main.hs  Makefile  cabal.project  flake.nix  fourmolu.yaml  splitka.cabal  todo
src/: Main.hs
src/CSS/: Bulma.hs
